crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__continues_parsing_if_unmatched_tag_found.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 12,
            },
            node_type: Error,
        },
        Node {
            loc: Location {
                start: 25,
                end: 25,
            },
            node_type: Text(
                "\n",
            ),
        },
        Node {
            loc: Location {
                start: 26,
                end: 43,
            },
            node_type: Element(
                Element {
                    tag: "span",
                    attrs: [],
                    children: [
                        Node {
                            loc: Location {
                                start: 32,
                                end: 36,
                            },
                            node_type: Text(
                                "hello",
                            ),
                        },
                    ],
                },
            ),
        },
    ],
    script: None,
}
