crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__error_on_unrecognized_special_block.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 19,
        },
        node_type: Error,
    },
]
