crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__error_when_no_in_token_found_in_for_block.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            metadata: Location {
                start: 0,
                end: 31,
            },
            node_type: Error,
        },
    ],
    script: None,
    css: None,
}
