crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__errors_on_invalid_closing_special_block-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 21,
            },
            node_type: Error,
        },
    ],
    script: None,
    css: None,
}
