crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__gives_error_when_end_of_comment_not_found.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
DecorousAst {
    nodes: [
        Node {
            loc: Location {
                start: 0,
                end: 9,
            },
            node_type: Text(
                "<!-- hello",
            ),
        },
    ],
    script: None,
    css: None,
}
