crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__parses_basic_attrs-2.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 23,
        },
        node_type: Element(
            Element {
                tag: "p",
                attrs: [
                    KeyValue(
                        "attr",
                        Some(
                            Literal(
                                "attribute",
                            ),
                        ),
                    ),
                ],
                children: [],
            },
        ),
    },
]
