crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__parses_basic_attrs-3.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 7,
        },
        node_type: Element(
            Element {
                tag: "p",
                attrs: [],
                children: [],
            },
        ),
    },
]
