crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__parses_basic_attrs-4.snap
---
source: crates/decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 16,
        },
        node_type: Element(
            Element {
                tag: "p",
                attrs: [
                    KeyValue(
                        "attr",
                        Some(
                            Literal(
                                "你好",
                            ),
                        ),
                    ),
                ],
                children: [],
            },
        ),
    },
]
