crates/decorous-frontend/src/snapshots/decorous_frontend__parser__tests__parses_basic_attrs-5.snap
---
source: decorous-frontend/src/parser.rs
expression: tree
---
[
    Node {
        loc: Location {
            start: 0,
            end: 37,
        },
        node_type: Element(
            Element {
                tag: "p",
                attrs: {
                    "attr": Some(
                        "one",
                    ),
                    "attr2": Some(
                        "two",
                    ),
                },
                children: [
                    Node {
                        loc: Location {
                            start: 30,
                            end: 33,
                        },
                        node_type: Text(
                            "text",
                        ),
                    },
                ],
            },
        ),
    },
]
